# customer-support-portal

./: .gitignore  DESIGN.md  README.md  README_AppOnly.md  make-it-for-attacker.sh  make-it-for-victim.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
attack/: 01-fingerprint.sh  02-traversal-config.sh  03-traversal-token.sh  04-upload-evil-profile.sh  05-trigger.sh  README.md  generate-evil-profile.sh  make-bundle.sh
data/config/: app_config.yaml
data/profiles/: active.yaml
data/secrets/: profile-upload-token
demo_attacker/: README.md  listener.py
demo_attacker/attack/: 02-traversal-config.sh  04-upload-evil-profile.sh  05-trigger.sh
demo_c2/: README.md  listener.py
demo_c2/attack/: 05-trigger.sh  generate-evil-profile.sh
demo_c2/systemd/: demo-c2.service
deploy/: install.sh
deploy/opt/support-portal/config/: app_config.yaml
deploy/opt/support-portal/profiles/: active.yaml
deploy/opt/support-portal/reports/: 0d1c9d10.json
deploy/opt/support-portal/static/: index.html
deploy/systemd/: support-portal.service
docs/superpowers/plans/: 2026-06-01-remove-deploy-dir.md
docs/superpowers/specs/: 2026-06-01-remove-deploy-dir-design.md
src/support_portal/: __main__.py  app.py  config.py  diagnostic_engine.py  static_files.py
src/support_portal/handlers/: internal.py  pages.py  support.py
src/support_portal/templates/: admin.html  base.html  index.html  report.html
tests/: conftest.py  test_attack_chain.py  test_diagnostic_engine.py  test_handlers.py
