[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "support-portal"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.1",
    "aiohttp-jinja2==1.5.1",
    "jinja2==3.1.4",
    "PyYAML==5.3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
